crates/swc_ecma_parser/tests/jsx/errors/issue-10635/index.js
<div >>=</div>;
<div className={styles.foo}>>=</div>;
